3rdparty/jasper-version-4.2.0/data/test/bad/nullptr.mif
MIF
component#tlx=0 tly=0 sampperx=4 samppery=2 width=32 height=64 prec=8 sgnd=0
component tlx=0 tly=0 sampperx=2 samppery=4 width=64 height=32 prec=8 sgnd=1
end
